[tool.poetry]
name = "ood-retrieval"
version = "0.1.0"
description = "Detection and Retrieval of Out-of-Distribution Objects in Semantic Segmentation"
authors = ["Philipp Oberdiek <git@oberdiek.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Cython = ">=0.29.21"
h5py = ">=3.1.0"
matplotlib = ">=3.3.3"
opencv-python = ">=4.4.0.46"
Pillow = ">=9.0.1"
pandas = ">=1.1.4"
scikit-learn = ">=0.23.2"
torchvision = ">=0.8.1"
tqdm = ">=4.52.0"
torch = ">=1.7"
numpy = ">=1.21"
scipy = ">=1.5.4"
sacred = ">=0.8.1"
importlib-metadata = ">=2.0.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
extend-exclude = ".venv,venv"

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
known_first_party = ["src"]
