[tool.poetry]
name = "ood-retrieval"
version = "0.1.0"
description = "Detection and Retrieval of Out-of-Distribution Objects in Semantic Segmentation"
authors = ["Philipp Oberdiek <git@oberdiek.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
Cython = "^0.29.21"
h5py = "^3.1.0"
importlib-metadata = "^2.0.0"
matplotlib = "^3.3.3"
numpy = "^1.21"
opencv-python = "^4.4.0.46"
pandas = "^1.1.4"
Pillow = "^9.0.1"
sacred = "^0.8.1"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"
torch = "^1.7"
torchvision = "^0.8.1"
tqdm = "^4.52.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"

[tool.black]
line-length = 88
extend-exclude = ".venv,venv"

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
known_first_party = ["src"]
